# weclaw

./: .env.example  .gitignore  CHANGELOG.md  DAY1_GUIDE.md  Dockerfile  INTRO.md  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: pre-commit
config/: config.example.yaml  config.terminal.yaml
examples/: langchain_agent.py
relay_server/: Dockerfile  __init__.py  server.py
tests/: __init__.py  test_basics.py  test_sdk.py
weclaw/: __init__.py  __main__.py  sdk.py  terminal.py
weclaw/brain/: __init__.py  core.py
weclaw/channel/: __init__.py  base.py  terminal.py
weclaw/claw2claw/: __init__.py  client.py  crypto.py  handler.py  protocol.py  relay.py
weclaw/memory/: __init__.py  contacts.py  store.py
weclaw/web/: card.html  contacts.html
