[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weclaw"
version = "1.0.0"
description = "🦞 WeClaw — 龙虾社交智能代理，让你的龙虾成为你与人际网络之间的智能接口"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WeClaw Team" },
]
keywords = ["agent", "social", "chatbot", "ai", "lobster"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/joyxiaofan-beep/weclaw"
Documentation = "https://github.com/joyxiaofan-beep/weclaw#readme"
Repository = "https://github.com/joyxiaofan-beep/weclaw"
Issues = "https://github.com/joyxiaofan-beep/weclaw/issues"
Changelog = "https://github.com/joyxiaofan-beep/weclaw/blob/main/CHANGELOG.md"

[project.scripts]
weclaw = "weclaw.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["weclaw"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
